[package]
name = "olt_migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
ssh2 = "0.9.4"
thiserror = "1.0.49"
toml = "0.8.4"
