[package]
name = "mygre"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
ssh2 = "0.9.4"
thiserror = "1.0.49"
toml = "0.8.4"
