[package]
name = "mygre"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
ssh2 = "0.9.4"
thiserror = "1.0.49"
timeout-readwrite = "0.3.3"
toml = "0.8.4"
